--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "clean": "rimraf www/ || true",
     "build": "npm run clean && tsc && cp package.json www/package.json && mkdir www/tmp/ && cd www && zip -r Archive.zip . && cd ..",
     "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
-    "start": "node .www/server.js"
+    "start": "node server.js"
   },
   "engines":{
     "node": ">=16.16.0",
